--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-js-modal": "^1.3.31",
     "vue-select": "^3.1.0"
   },
   "devDependencies": {
