Fix permissions in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 script:
   - docker run --rm -v "$(pwd)/server":/usr/src/app -e CGO_ENABLED=0 -e GOOS=linux -w /usr/src/app golang:1.12-stretch go build -a -installsuffix cgo
   - docker run --rm -it -v "$(pwd)":/home/node/app node sh -c "cd /home/node/app && npm install && npm run lint && npm run build"
+  - sudo chown -R $USER .
   - docker build -t wafflespeanut/ace-away .
 
 after_success:
